<resources>
    <string name="app_name">MEC</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_settings">Settings</string>
    <string name="title_notifications">Notifications</string>
    <string name="username">Email</string>
    <string name="password">Password</string>
    <string name="forgot_password">Forgot Password</string>

    <string name="title_Customer">Customer</string>
    <string name="title_Maintenance">Maintenance</string>
    <string name="title_employee">Employee</string>
  <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="login">Login</string>
    <string name="create_account">Create Account</string>
    <string name="become_a_partner">Become a Partner</string>
    <string name="gym">Gym</string>
    <string name="nutrients">Nutrients</string>
    <string name="fill_the_required_information">Fill the required information</string>
    <string name="country">Country</string>
    <string name="city">City</string>
    <string name="gym_type">Gym Type</string>
    <string name="upload_gym_license">Upload Gym License</string>
    <string name="upload_nutrients_license">Upload Nutrients License</string>
    <string name="signup">Signup</string>
    <string name="center_name">Center Name</string>
    <string name="gym_name">Gym Name</string>
    <string name="nutrients_name">Nutrients Name</string>
    <string name="experience">Experience</string>
    <string name="upload_center_license">Upload Center License</string>
    <string name="full_name">Full Name</string>
    <string name="email">Email</string>
    <string name="phone_number">Phone Number</string>
    <string name="date_of_birth">date of birth</string>
    <string name="next">Next</string>
    <string name="height">Height (CM)</string>
    <string name="weight">Weight (KG)</string>
    <string name="gender">Gender</string>
    <string name="tell_us_about_your_life">Tell Us About Your Life</string>
    <string name="do_you_have_any_disease">Do you have any disease?</string>
    <string name="do_you_have_any_allergies">Do you have any allergies?</string>
    <string name="nutrient">Nutrient</string>
    <string name="nutrition_centers">Nutrition Centers</string>
    <string name="health_food">Health Food</string>
    <string name="my_information">My Information</string>
    <string name="patient_records">Patient Records</string>
    <string name="my_offers">My Offers</string>
    <string name="records">Records</string>
    <string name="gym_offers">Gym Offers</string>
    <string name="my_activity">My Activity</string>
    <string name="book_appointment">Book Appointment</string>
    <string name="gym_reservation">Gym Reservation</string>
    <string name="online_appointment_link">Online Appointment Link</string>
    <string name="cancel_appointment">Cancel Appointment</string>
    <string name="food_list_of_the_week">Food list of the week</string>
    <string name="upload_your_inbody_test_file">Upload your inbody test file</string>
    <string name="health_restaurant_name">Health restaurant name</string>
    <string name="upload_restaurant_license">Upload Restaurant Licence</string>
    <string name="social_media_accounts">Social Media Accounts</string>
    <string name="nutritionist">Nutritionist</string>
    <string name="nutritionist_name">Nutritionist Name</string>
    <string name="upload_nutritionist_license">Upload Nutritionist License</string>
  <string name="welcome">Welcome Back!</string>

  <string name="menu">Menu</string>
  <string name="notifications">Notifications</string>
  <string name="create">Create</string>
  <string name="search">Search</string>
    <string name="description">Description</string>
  <string name="headline">Headline</string>
    <string name="add">Add</string>
  <string name="add_customer">Add Customer</string>
  <string name="location">Location</string>
  <string name="elevator_type">Elevator Type</string>
  <string name="Elevator_Control_Panel">"Elevator Control Panel "</string>
  <string name="add_new_customer">Add New Customer</string>
    <string name="CustomerInfo">Customer Info</string>
  <string name="Delete">Delete</string>
  <string name="Edit"> Edit</string>
  <string name="all">All</string>
  <string name="today">Today</string>
  <string name="not_approved">Not Approved</string>
  <string name="search_customer">Search Customer</string>
  <string name="approved">Approved</string>
  <string name="done">Done</string>
    <string name="get_started">Get Started</string>
    <string name="task_details">Task Details</string>
  <string name="task_subject">Task Subject</string>
  <string name="sunday_june_23">Sunday June 23</string>
  <string name="customer_name">Customer Name</string>
  <string name="employee_first_name">Employee First Name</string>
  <string name="employee_last_name">Employee Last Name</string>
  <string name="add_a_new_task">Add a new task</string>
  <string name="management_approval">Management Approval</string>
  <string name="todo">TODO</string>
  <string name="add_task">Add Task</string>
  <string name="manager_note">Manager Note</string>
    <string name="edit_task">Edit Task</string>
  <string name="employee_task">Employee Task</string>
    <string name="manager">Manager</string>
    <string name="signup_confirmed_please_login_to_contenue">Signup Confirmed please login to continue</string>
    <string name="employee_note">Employee Note</string>
    <string name="see_tasks">See Tasks</string>
    <string name="task">Task</string>
  <string name="employee_notes">Employee Notes</string>
  <string name="last_name">Last Name</string>
  <string name="first_name">First Name</string>

</resources>