<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    >

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <include
            android:id="@+id/toolbar"
            layout="@layout/view_toolbar"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


        <ImageView
            android:id="@+id/iv_header"
            android:layout_width="412dp"
            android:layout_height="212dp"
            android:src="@drawable/rounded_filled_bg"
            app:layout_constraintBottom_toTopOf="@id/til_name"
            app:layout_constraintTop_toBottomOf="@id/toolbar"
            app:layout_constraintVertical_bias="0"
            app:layout_constraintVertical_chainStyle="packed"
            tools:ignore="MissingConstraints" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/til_name"
            style="@style/genericEditText"
            android:layout_marginTop="@dimen/_10sdp"
            android:hint="@string/full_name"
            app:layout_constraintBottom_toTopOf="@id/til_location"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/iv_header"
            app:layout_constraintVertical_bias="0"
            app:startIconDrawable="@drawable/ic_baseline_person_24"
            app:startIconTint="@color/darkNavy">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/name"
                style="@style/genericMaterialTextInputEditText" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/til_location"
            style="@style/genericEditText"
            android:layout_marginTop="@dimen/_10sdp"
            android:hint="@string/location"
            app:layout_constraintBottom_toTopOf="@id/til_eelvator"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/til_name"
            app:startIconDrawable="@drawable/ic_baseline_location_on_24"
            app:startIconTint="@color/darkNavy">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/location"
                style="@style/genericMaterialTextInputEditText" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/til_eelvator"
            style="@style/genericEditText"
            android:layout_marginTop="@dimen/_10sdp"
            android:hint="@string/elevator_type"
            app:layout_constraintBottom_toTopOf="@id/til_panel"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/til_location"
            app:startIconDrawable="@drawable/material_symbols__elevator_outline"
            app:startIconTint="@color/darkNavy">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/elevator"
                style="@style/genericMaterialTextInputEditText"
               />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/til_panel"
            style="@style/genericEditText"
            android:layout_marginTop="@dimen/_10sdp"
            android:hint="@string/Elevator_Control_Panel"
            app:layout_constraintBottom_toTopOf="@id/til_phone_number"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/til_eelvator"
            app:startIconDrawable="@drawable/fluent__panel_left_text_32_filled"
            app:startIconTint="@color/darkNavy">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/panel"
                style="@style/genericMaterialTextInputEditText"
                android:imeOptions="actionDone"
                android:inputType="text" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/til_phone_number"
            style="@style/genericEditText"
            android:layout_marginTop="@dimen/_10sdp"
            android:hint="@string/phone_number"
            android:visibility="gone"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/til_panel">

            <com.google.android.material.textfield.TextInputEditText
                style="@style/genericMaterialTextInputEditText"
              />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/til_country"
            style="@style/genericSpinner"
            android:layout_marginTop="@dimen/_10sdp"
            android:hint="@string/country"
            android:visibility="gone"
            app:layout_constraintBottom_toTopOf="@id/til_city"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/til_phone_number">

            <com.google.android.material.textfield.MaterialAutoCompleteTextView
                android:id="@+id/mactv_country"
                style="@style/genericMaterialTextInputEditText" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/til_city"
            style="@style/genericSpinner"
            android:layout_marginTop="@dimen/_10sdp"
            android:hint="@string/city"
            android:visibility="gone"
            app:layout_constraintBottom_toTopOf="@id/til_dob"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/til_country">

            <com.google.android.material.textfield.MaterialAutoCompleteTextView
                android:id="@+id/mactv_city"
                style="@style/genericMaterialTextInputEditText" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/til_dob"
            style="@style/genericEditText"
            android:layout_marginTop="@dimen/_10sdp"
            android:hint="@string/date_of_birth"
            android:visibility="gone"
            app:layout_constraintBottom_toTopOf="@id/til_gender"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/til_city">

            <com.google.android.material.textfield.TextInputEditText
                style="@style/genericMaterialTextInputEditText"
                android:inputType="date" />

        </com.google.android.material.textfield.TextInputLayout>


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/til_gender"
            style="@style/genericSpinner"
            android:layout_marginTop="@dimen/_10sdp"
            android:hint="@string/gender"
            android:visibility="gone"
            app:layout_constraintBottom_toTopOf="@id/til_hight"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/til_dob">

            <com.google.android.material.textfield.MaterialAutoCompleteTextView
                android:id="@+id/mactv_gender"
                style="@style/genericMaterialTextInputEditText"
                android:visibility="gone" />

        </com.google.android.material.textfield.TextInputLayout>


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/til_hight"
            style="@style/genericEditText"
            android:layout_width="0dp"
            android:layout_marginTop="@dimen/_10sdp"
            android:hint="@string/height"
            app:layout_constraintEnd_toStartOf="@id/til_waghit"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/til_gender">

            <com.google.android.material.textfield.TextInputEditText
                style="@style/genericMaterialTextInputEditText"
                android:inputType="numberDecimal"
                android:visibility="gone" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/til_waghit"
            style="@style/genericEditText"
            android:layout_width="0dp"
            android:hint="@string/weight"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/til_hight"
            app:layout_constraintTop_toTopOf="@id/til_hight">

            <com.google.android.material.textfield.TextInputEditText
                style="@style/genericMaterialTextInputEditText"
                android:inputType="numberDecimal"
                android:visibility="gone" />

        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/button_edit"
            style="@style/genericButton"
            android:layout_width="160dp"
            android:layout_height="70dp"
            android:layout_marginHorizontal="@dimen/_10sdp"
            android:layout_marginTop="40dp"
            android:layout_marginEnd="34dp"
            android:layout_marginBottom="88dp"
            android:background="@drawable/button_background"
            android:text="@string/Edit"
            android:textAlignment="center"
            android:textSize="20sp"
            android:textStyle="normal"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/til_panel"
            tools:enabled="true" />

        <Button
            android:id="@+id/button_delete"
            style="@style/genericButton"
            android:layout_width="160dp"
            android:layout_height="70dp"
            android:layout_marginHorizontal="@dimen/_10sdp"
            android:layout_marginStart="34dp"
            android:layout_marginTop="40dp"
            android:layout_marginEnd="30dp"
            android:background="@drawable/button_background"
            android:text="@string/Delete"
            android:textAlignment="center"
            android:textSize="20sp"
            android:textStyle="normal"
            app:layout_constraintEnd_toStartOf="@+id/button_edit"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/til_panel"
            tools:enabled="true" />

        <TextView
            android:id="@+id/til_headline"
            android:layout_width="219dp"
            android:layout_height="58dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="190dp"
            android:layout_marginEnd="176dp"
            android:fontFamily="sans-serif-medium"
            android:text="@string/CustomerInfo"
            android:textAlignment="textStart"
            android:textColor="@color/darkNavy"
            android:textSize="34sp"
            app:drawableEndCompat="@drawable/ph__user_list_bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="62dp"
            android:layout_height="50dp"
            android:layout_marginTop="190dp"
            android:layout_marginEnd="114dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/til_headline"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/hugeicons__user_list" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>