<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    >

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/iv_header"
            android:layout_width="405dp"
            android:layout_height="80dp"
            android:contentDescription="@string/todo"
            android:src="@drawable/rounded_filled_bg"
            app:layout_constraintBottom_toTopOf="@id/til_Subject"
            app:layout_constraintTop_toBottomOf="@id/toolbar"
            app:layout_constraintVertical_bias="0"
            app:layout_constraintVertical_chainStyle="packed"
            tools:ignore="MissingConstraints" />

        <include
            android:id="@+id/toolbar"
            layout="@layout/view_toolbar"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/til_Subject"
            style="@style/genericEditText"
            android:layout_marginTop="@dimen/_10sdp"
            android:hint="@string/task_subject"
            app:layout_constraintBottom_toTopOf="@id/til_Details"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/iv_header"
            app:layout_constraintVertical_bias="0"
            app:startIconDrawable="@drawable/fluent__task_list_24_filled"
            app:startIconTint="@color/darkNavy">

            <com.google.android.material.textfield.TextInputEditText
                style="@style/genericMaterialTextInputEditText"
                tools:ignore="TextContrastCheck" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/til_Details"
            style="@style/genericEditText"
            android:layout_width="404dp"
            android:layout_height="175dp"
            android:layout_marginTop="@dimen/_10sdp"
            android:gravity="center_vertical"
            android:hint="@string/task_details"
            app:layout_constraintBottom_toTopOf="@id/til_customerName"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/til_Subject"
            app:startIconDrawable="@drawable/streamline__task_list"
            app:startIconTint="@color/darkNavy">

            <com.google.android.material.textfield.TextInputEditText
                style="@style/genericMaterialTextInputEditText"
                android:layout_width="370dp"
                android:layout_height="156dp"
                android:gravity="center_vertical"
                android:maxLines="0"
                tools:ignore="TextContrastCheck" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/til_customerName"
            style="@style/genericEditText"
            android:layout_marginTop="@dimen/_10sdp"
            android:hint="@string/customer_name"
            app:layout_constraintBottom_toTopOf="@id/til_employee_firstName"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/til_Details"
            app:startIconDrawable="@drawable/hugeicons__user_list"
            app:startIconTint="@color/darkNavy">

            <com.google.android.material.textfield.TextInputEditText
                style="@style/genericMaterialTextInputEditText"
                android:inputType="textEmailAddress" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/til_employee_firstName"
            style="@style/genericEditText"
            android:layout_marginTop="@dimen/_10sdp"
            android:hint="@string/employee_first_name"
            android:visibility="gone"
            app:layout_constraintBottom_toTopOf="@id/til_employee_lastName"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/til_customerName"
            app:startIconDrawable="@drawable/clarity__employee_group_line"
            app:startIconTint="@color/darkNavy">

            <com.google.android.material.textfield.TextInputEditText
                style="@style/genericMaterialTextInputEditText"
                android:imeOptions="actionDone"
                android:inputType="text" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/til_employee_lastName"
            style="@style/genericEditText"
            android:layout_marginTop="@dimen/_10sdp"
            android:hint="@string/employee_last_name"
            android:visibility="gone"
            app:layout_constraintBottom_toTopOf="@id/til_managerNote"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/til_employee_firstName"
            app:startIconDrawable="@drawable/clarity__employee_group_line"
            app:startIconTint="@color/darkNavy">

            <com.google.android.material.textfield.TextInputEditText
                style="@style/genericMaterialTextInputEditText"
                android:imeOptions="actionDone"
                android:inputType="text" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/til_managerNote"
            style="@style/genericEditText"
            android:layout_width="408dp"
            android:layout_height="137dp"
            android:layout_marginTop="@dimen/_10sdp"
            android:hint="@string/manager_note"
            android:visibility="visible"
            app:layout_constraintBottom_toTopOf="@id/approval_switch"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/til_employee_lastName">

            <com.google.android.material.textfield.TextInputEditText
                style="@style/genericMaterialTextInputEditText"
                android:layout_width="376dp"
                android:layout_height="122dp"
                android:inputType="phone" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/til_country"
            style="@style/genericSpinner"
            android:layout_marginTop="@dimen/_10sdp"
            android:hint="@string/country"
            android:visibility="gone"
            app:layout_constraintBottom_toTopOf="@id/til_city"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/til_managerNote">

            <com.google.android.material.textfield.MaterialAutoCompleteTextView
                android:id="@+id/mactv_country"
                style="@style/genericMaterialTextInputEditText" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/til_city"
            style="@style/genericSpinner"
            android:layout_marginTop="@dimen/_10sdp"
            android:hint="@string/city"
            android:visibility="gone"
            app:layout_constraintBottom_toTopOf="@id/til_dob"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/til_country">

            <com.google.android.material.textfield.MaterialAutoCompleteTextView
                android:id="@+id/mactv_city"
                style="@style/genericMaterialTextInputEditText" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/til_dob"
            style="@style/genericEditText"
            android:layout_marginTop="@dimen/_10sdp"
            android:hint="@string/date_of_birth"
            android:visibility="gone"
            app:layout_constraintBottom_toTopOf="@id/til_gender"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/til_city">

            <com.google.android.material.textfield.TextInputEditText
                style="@style/genericMaterialTextInputEditText"
                android:inputType="date" />

        </com.google.android.material.textfield.TextInputLayout>


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/til_gender"
            style="@style/genericSpinner"
            android:layout_marginTop="@dimen/_10sdp"
            android:hint="@string/gender"
            android:visibility="gone"
            app:layout_constraintBottom_toTopOf="@id/til_hight"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/til_dob">

            <com.google.android.material.textfield.MaterialAutoCompleteTextView
                android:id="@+id/mactv_gender"
                style="@style/genericMaterialTextInputEditText"
                android:visibility="gone" />

        </com.google.android.material.textfield.TextInputLayout>


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/til_hight"
            style="@style/genericEditText"
            android:layout_width="0dp"
            android:layout_marginTop="@dimen/_10sdp"
            android:hint="@string/height"
            app:layout_constraintEnd_toStartOf="@id/til_waghit"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/til_gender">

            <com.google.android.material.textfield.TextInputEditText
                style="@style/genericMaterialTextInputEditText"
                android:inputType="numberDecimal"
                android:visibility="gone" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/til_waghit"
            style="@style/genericEditText"
            android:layout_width="0dp"
            android:hint="@string/weight"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/til_hight"
            app:layout_constraintTop_toTopOf="@id/til_hight">

            <com.google.android.material.textfield.TextInputEditText
                style="@style/genericMaterialTextInputEditText"
                android:inputType="numberDecimal"
                android:visibility="gone" />

        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/button_edit_task"
            style="@style/genericButton"
            android:layout_width="218dp"
            android:layout_height="49dp"
            android:layout_marginHorizontal="@dimen/_10sdp"
            android:layout_marginStart="93dp"
            android:layout_marginTop="30dp"
            android:layout_marginEnd="93dp"
            android:layout_marginBottom="20dp"
            android:background="@drawable/button_background"
            android:text="Done"
            android:textAlignment="center"
            android:textSize="20sp"
            android:textStyle="normal"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/approval_switch"
            tools:enabled="true" />

        <TextView
            android:id="@+id/til_headline"
            android:layout_width="208dp"
            android:layout_height="50dp"
            android:layout_marginTop="7dp"
            android:fontFamily="sans-serif-medium"
            android:text="@string/employee_task"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="20sp"
            app:drawableEndCompat="@drawable/ph__user_list_bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="375dp"
            android:layout_height="29dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="80dp"
            android:layout_marginEnd="16dp"
            android:fontFamily="sans-serif-medium"
            android:text="@string/sunday_june_23"
            android:textAlignment="center"
            android:textColor="@color/blueNavy"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="TextSizeCheck" />

        <androidx.appcompat.widget.SwitchCompat
            android:id="@+id/approval_switch"
            android:layout_width="379dp"
            android:layout_height="wrap_content"
            android:padding="8dp"
            android:text="@string/management_approval"
            android:textAlignment="center"
            android:textColor="@color/darkNavy"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/til_managerNote"
            app:switchMinWidth="56dp"
            app:thumbTint="@color/blueNavy"
            app:trackTint="@color/lightGray"
            tools:ignore="UseSwitchCompatOrMaterialXml,VisualLintButtonSize"
            tools:layout_editor_absoluteX="4dp"
            tools:layout_editor_absoluteY="811dp" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>